Se agrego icono de delete y cambio de dimensiónes del display

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="keyboard">
             <button class="button-key" id="ac-key">AC</button>
-            <button class="button-key" id="sup-key">SUP</button>
+            <button class="button-key" id="sup-key"><img class="sup-key-icon" src="./assets/delete.svg"/></button>
             <button class="button-key" id="prec-key">%</button>
             <button class="button-key" id="divi-key">/</button>
             <button class="button-key" id="seven-key">7</button>
